# Simple-OpenGL-Setup

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
lib/CMakeUtils/: README.md  files_and_folders.cmake  visual_studio_helpers.cmake
lib/glad/include/KHR/: khrplatform.h
src/: App.cpp  App.hpp  main.cpp
